--- a/src/style/Calendar.css
+++ b/src/style/Calendar.css
@@ -1,23 +1,28 @@
-.react-calendar{
+.react-calendar {
     width: 100%;
     height: 100%;
     border: 1px solid #ccc;
     border-radius: 10px;
-
+    position: relative;
+    z-index: 1;
+    margin-top: 20px;
 }
-.react-calendar__navigation{
-    background-color: rgba(147, 240, 178, 0.6);
+
+.react-calendar__navigation {
+    background-color: rgba(251, 255, 133, 0.887);
     padding-top: 5px;
-}
-.react-calendar__navigation button {
-    pointer-events: none;
+    border-radius: 7px;
 }
 
+.react-calendar__navigation button {
+    pointer-events: auto; /* none에서 auto로 수정 */
+}
 
 /* 1. 현재 날짜 스타일 */
 .react-calendar__tile--now {
-    background: #f0f0f0; /* 배경색 */
+    background: #e8e8e8; /* 배경색 */
     color: #333; /* 글자색 */
+    border-radius: 50%;
 }
 
 /* 2. 달력 년/월 표시 글씨 커스텀 */
@@ -35,7 +40,6 @@
     font-size: 15px; /* 글자 크기 */
     font-weight: bold; /* 글자 두껍게 */    
     text-decoration: none; /* 언더바 제거 */
-
 }
 
 /* 4. day 타일 한개 한개 모양 커스텀 */
@@ -57,6 +61,7 @@
 .react-calendar__tile--active {
     color: #fff; /* 글자색 */
     background-color: #ef9F11; /* 배경색 */
+    border-radius: 50%;
 }
 
 /* 7. (range일 경우)시작날짜, 끝 날짜 커스텀 */
@@ -66,3 +71,37 @@
     color: #fff; /* 글자색 */
 }
 
+/* CalendarDropdown.css */
+
+.calendar-dropdown-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .calendar-dropdown-button {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 200%;
+    margin-top: 10px;
+  }
+  
+  .calendar-dropdown-button:hover {
+    background-color: rgba(251, 255, 133, 0.887);
+  }
+  
+  .calendar-dropdown {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    z-index: 1000;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+  }
+  
