--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   
-  background-color: rgba(58,87,232,1);
+  background-color: rgb(251 146 60);
   
   color: rgba(255,255,255,1);
 
@@ -20,7 +20,7 @@
 }
 
 .primary-button-lg:hover {
-  opacity: 0.95;
+  opacity: 0.85;
 }
 
 .disable-button-lg{
