--- a/src/component/inputBox/style.css
+++ b/src/component/inputBox/style.css
@@ -52,8 +52,8 @@
     width: 110px;
     height: 44px;
 
-    background-color: rgba(58,87,232,0.2);
-    color: rgba(45,66,178,1);
+    background-color: rgba(255, 185, 94, 0.997);
+    color: rgb(255, 255, 255);
     font-size: 16px;
     font-weight: 400;
     line-height: 175%;
@@ -71,7 +71,7 @@
     height: 44px;
 
     background-color: rgba(240,240,240,1);
-    color: rgba(138,146,166,1);
+    color: rgb(177, 179, 184);
     font-size: 16px;
     font-weight: 400;
     line-height: 175%;
@@ -80,7 +80,7 @@
 }
 
 .input-box-button:hover{
-    background-color: rgba(58,87,232,0.4);
+    background-color: rgb(255, 159, 76);
 }
 
 .input-box-message {
@@ -91,8 +91,8 @@
 }
 
 .input-box-message-error {
-    color : rgba(255,86,64,1);
+    color : rgb(255, 88, 66);
     font-size: 13px;
-    font-weight: 400;
+    font-weight: 450;
     line-height: normal;
 }
