--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,13 @@
   color: red;
   font-size: 12px;
 }
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'GmarketSansMedium';
 }
